@@ -1,5 +1,9 @@
 2013-01-20  Colin Watson  <cjwatson@ubuntu.com>
 
+	Remove nested functions from ELF iterators.
+
+2013-01-20  Colin Watson  <cjwatson@ubuntu.com>
+
 	Remove nested functions from device iterators.
 
 	* include/grub/arc/arc.h (grub_arc_iterate_devs_hook_t): New type.
